k8s-workshop/ingress-nginx/web-app-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-nginx-ingress
spec:
  ingressClassName: nginx    # 👈 Must match the IngressClass name
  rules:
  - host: web-app-nginx.__DOMAIN__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-nginx
            port:
              number: 80
